# tikas

./: .gitignore  CLAUDE.md  CNAME  _headers  index.html  server.py
awesome-claude-code/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  THE_RESOURCES_TABLE.csv  acc-config.yaml  pyproject.toml
awesome-claude-code/.github/: PULL_REQUEST_TEMPLATE.md
awesome-claude-code/README_ALTERNATIVES/: README_AWESOME.md  README_CLASSIC.md  README_EXTRA.md  README_FLAT_ALL_AZ.md  README_FLAT_ALL_CREATED.md  README_FLAT_ALL_RELEASES.md  README_FLAT_ALL_UPDATED.md  README_FLAT_CLAUDE-MD_AZ.md  README_FLAT_CLAUDE-MD_CREATED.md  README_FLAT_CLAUDE-MD_RELEASES.md  README_FLAT_CLAUDE-MD_UPDATED.md  README_FLAT_CLIENTS_AZ.md  README_FLAT_CLIENTS_CREATED.md  README_FLAT_CLIENTS_RELEASES.md  README_FLAT_CLIENTS_UPDATED.md  README_FLAT_COMMANDS_AZ.md  README_FLAT_COMMANDS_CREATED.md  README_FLAT_COMMANDS_RELEASES.md  README_FLAT_COMMANDS_UPDATED.md  README_FLAT_DOCS_AZ.md  README_FLAT_DOCS_CREATED.md  README_FLAT_DOCS_RELEASES.md  README_FLAT_DOCS_UPDATED.md  README_FLAT_HOOKS_AZ.md  README_FLAT_HOOKS_CREATED.md  README_FLAT_HOOKS_RELEASES.md  README_FLAT_HOOKS_UPDATED.md  README_FLAT_SKILLS_AZ.md  README_FLAT_SKILLS_CREATED.md  README_FLAT_SKILLS_RELEASES.md  README_FLAT_SKILLS_UPDATED.md  README_FLAT_STATUSLINE_AZ.md  README_FLAT_STATUSLINE_CREATED.md  README_FLAT_STATUSLINE_RELEASES.md  README_FLAT_STATUSLINE_UPDATED.md  README_FLAT_STYLES_AZ.md  README_FLAT_STYLES_CREATED.md  README_FLAT_STYLES_RELEASES.md  README_FLAT_STYLES_UPDATED.md  README_FLAT_TOOLING_AZ.md  (+7 more)
awesome-claude-code/data/: repo-ticker-previous.csv  repo-ticker.csv
awesome-claude-code/docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  COOLDOWN.md  HOW_IT_LOOKS.md  HOW_IT_WORKS.md  README-GENERATION.md  REPO_TICKER.md  SECURITY.md  TESTING.md
awesome-claude-code/resources/: README.md
awesome-claude-code/scripts/: README.md
awesome-claude-code/templates/: README_AWESOME.template.md  README_CLASSIC.template.md  README_EXTRA.template.md  categories.yaml  footer.template.md  resource-overrides.yaml
awesome-claude-code/tests/: conftest.py  temp-verify-override-autolock.temp.py  test_asset_path_resolution.py  test_badge_notification_validation.py  test_category_utils.py  test_detect_informal_submission.py  test_fetch_repo_ticker_data.py  test_flat_list_generator.py  test_generate_readme.py  test_generate_ticker_svg.py  test_git_utils.py  test_github_utils.py  test_readme_alternative_outputs.py  (+8 more)
ruflo/: .gitignore  (+6 more)
(+774 files in other folders)
